--- a/Board/src/main/webapp/WEB-INF/web.xml
+++ b/Board/src/main/webapp/WEB-INF/web.xml
@@ -9,4 +9,24 @@
     <welcome-file>default.jsp</welcome-file>
     <welcome-file>default.htm</welcome-file>
   </welcome-file-list>
+  <servlet>
+    <description></description>
+    <display-name>UserController</display-name>
+    <servlet-name>UserController</servlet-name>
+    <servlet-class>com.wp.controller.UserController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>UserController</servlet-name>
+    <url-pattern>/UserController</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>PostController</display-name>
+    <servlet-name>PostController</servlet-name>
+    <servlet-class>com.wp.controller.PostController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>PostController</servlet-name>
+    <url-pattern>/PostController</url-pattern>
+  </servlet-mapping>
 </web-app>
